[gd_scene load_steps=4 format=3 uid="uid://bar1wx54hl5nv"]

[ext_resource type="Texture2D" uid="uid://b232tmj85wv4e" path="res://assets/medievalRTS/medieval_tilesheet.png" id="1_ea0mm"]
[ext_resource type="Script" path="res://resource.gd" id="1_frtn8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8k3f"]
size = Vector2(32, 32)

[node name="Resource" type="Area2D"]
script = ExtResource("1_frtn8")

[node name="StoneSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_ea0mm")
region_enabled = true
region_rect = Rect2(621, 432, 38, 32)

[node name="GoldSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_ea0mm")
region_enabled = true
region_rect = Rect2(909, 431, 38, 35)

[node name="WoodSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_ea0mm")
region_enabled = true
region_rect = Rect2(723, 328, 26, 47)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 2
shape = SubResource("RectangleShape2D_a8k3f")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
